# rinha-ocaml5

./: Dockerfile  README.md  db.sqlite  deploy.sh  docker-compose.yml  dune-project  init.sql  rinha_ocaml5.opam  sample-pgdb.sh
lib/: dune
stress-test-reports/0-empty-endpoints-just-logging-on-docker-single-instance/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
stress-test-reports/0-empty-endpoints-just-logging-on-docker-single-instance/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
stress-test-reports/1-persist-in-postgres-on-docker-single-instance/: index.html  req_busca-inva-lida-b5618.html  req_busca-va-lida-d7f0d.html  req_consulta-5d76b.html  req_criac-a-o-ce502.html
stress-test-reports/1-persist-in-postgres-on-docker-single-instance/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
